Bug 1500627 - Treat min-main-size:[keyword] as "auto" for flex items, if main axis is the item's block axis. r=dholbert, a=RyanVM

Keywords on the sizing properties in the block axis should behave as
initial values in the flex frame. We store the keywords as enum, instead
of auto or none in nsStyleCoord, so we have to handle it explicitly.

Differential Revision: https://phabricator.services.mozilla.com/D9438